@@ -1,3 +1,4 @@
+09 Jul 2008 panel support for scrolling up/down one line - Fish
 08 Jul 2008 AUTOMOUNT redesign: support +allowed/-disallowed dirs
             and create associated 'automount' panel command - Fish
 22 Jun 2008 Fix tape messages print format bug causing crash - Fish
